--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -430,7 +430,7 @@ Enable indexed search. This will generate a search index file that allow faster 
 
 List of tags to ignore when parsing content for the search API response. This is useful to avoid including code snippets in the search results or style that does not provide any useful information.
 
-### `ignoreQuery`
+### `filterQuery`
 
 - Type: `QueryBuilderWhere`{lang=ts}
 - Default: `{}`{lang=ts}
