docs: grammatical tweaks on markdown page

--- a/docs/content/2.usage/2.markdown.md
+++ b/docs/content/2.usage/2.markdown.md
@@ -5,7 +5,7 @@ description: "Nuxt Content uses the Markdown syntax and conventions to provide a
 
 ## Introduction
 
-We create the MDC syntax to superchage the Markdown syntax to give the ability to leverage the power of Vue components with slots and props.
+We created the MDC syntax to supercharge Markdown and give you the ability to leverage the power of Vue components with slots and props.
 
 ::callout
 Install the [MDC VS Code extension](https://marketplace.visualstudio.com/items?itemName=Nuxt.mdc) to get proper syntax highlighting for your MDC components.
