--- a/docs/content/2.usage/2.markdown.md
+++ b/docs/content/2.usage/2.markdown.md
@@ -460,7 +460,7 @@ In addition to mdc components and `span`, attribute syntax will work on images, 
 
 ## Binding Data in Markdown
 
-You can bind data within your Markdown document using the `{{ $doc.variable }}` syntax. These values can be defined in the YAML front matter at the top of the document, within each MDC component, or injected using the `data` prop of the `<ContentRendererMarkdown>` component.
+You can bind data within your Markdown document using the `{{ $doc.variable || 'defaultValue' }}` syntax. These values can be defined in the YAML front matter at the top of the document, within each MDC component, or injected using the `data` prop of the `<ContentRendererMarkdown>` component.
 
 ### Example 1: Define in YAML
 
@@ -471,7 +471,7 @@ description: 'meta description of the page'
 customVariable: 'Custom Value'
 ---
 
-# The Title is {{ $doc.title }} and customVariable is {{ $doc.customVariable }}
+# The Title is {{ $doc.title }} and customVariable is {{ $doc.customVariable || 'defaultValue' }}
 
 ```
 
@@ -493,7 +493,7 @@ const mdcVars = ref({ name: 'Maxime'});
 
 ```md
 
-# Hello {{ $doc.name }}
+# Hello {{ $doc.name || 'World' }}
 
 ```
 
