Apply suggestions from code review

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -238,6 +238,7 @@ export default defineNuxtConfig({
   content: {
     highlight: {
       preload: [
+        // Read more about shikiji languages: https://github.com/antfu/shikiji#fine-grained-bundle
         JSON.parse(
           readFileSync('./shiki/languages/gdscript.tmLanguage.json', 'utf-8'),
         ),
