--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -238,17 +238,10 @@ export default defineNuxtConfig({
   content: {
     highlight: {
       preload: [
-        {
-          id: 'gdscript',
-          scopeName: 'source.gdscript',
-          aliases: ['gdscript', 'gd'], // Use to mark code blocks in Markdown
-          grammar: JSON.parse(
-            readFileSync(
-              // Place the language grammar file somewhere in your project
-              './shiki/languages/gdscript.tmLanguage.json'
-            ).toString()
-          ),
-        },
+        // Read more about shikiji languages: https://github.com/antfu/shikiji#fine-grained-bundle
+        JSON.parse(
+          readFileSync('./shiki/languages/gdscript.tmLanguage.json', 'utf-8'),
+        ),
       ],
     },
   },
