--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -402,35 +402,37 @@ export default defineNuxtConfig({
 
 Options for yaml parser.
 
-## `search`
+## `experimental`
+
+### `search`
 
 - Type: `boolean | undefined`{lang=ts}
 - Default: `undefined`{lang=ts}
 
 Enable search feature.
 
-### `indexed`
+#### `indexed`
 
 - Type: `boolean`{lang=ts}
 - Default: `true`{lang=ts}
 
 Enable indexed search. This will generate a search index file that allow faster and more performant search.
 
-### `ignoredTags`
+#### `ignoredTags`
 
 - Type: `string[]`{lang=ts}
 - Default: `['style', 'code']`{lang=ts}
 
 List of tags to ignore when parsing content for the search API response. This is useful to avoid including code snippets in the search results or style that does not provide any useful information.
 
-### `filterQuery`
+#### `filterQuery`
 
 - Type: `QueryBuilderWhere`{lang=ts}
 - Default: `{}`{lang=ts}
 
 Query to ignore when parsing content for the search API response. This is useful to avoid including content that is not meant to be searchable like drafts or private content.
 
-### `options`
+#### `options`
 
 - Type: `object`{lang=ts}
 - Default:
