--- a/docs/content/2.usage/3.search.md
+++ b/docs/content/2.usage/3.search.md
@@ -9,7 +9,9 @@ First, you need to enable search in the `nuxt.config.js` file:
 ```js [nuxt.config.js]
 export default defineNuxtConfig({
   content: {
-    search: true
+    experimental: {
+      search: true
+    }
   }
 })
 ```
