--- a/docs/content/2.usage/3.search.md
+++ b/docs/content/2.usage/3.search.md
@@ -53,8 +53,10 @@ If needed, you can disable the indexed search and use a simple search instead:
 ```js [nuxt.config.js]
 export default defineNuxtConfig({
   content: {
-    search: {
-      indexed: false
+    experimental: {
+      search: {
+        indexed: false
+      }
     }
   }
 })
