docs: Update 3.search.md

--- a/docs/content/2.usage/3.search.md
+++ b/docs/content/2.usage/3.search.md
@@ -1,12 +1,13 @@
-# Search
-
-With some simple configuration and a composable, you can add search to your Nuxt Content site.
+---
+title: Search
+description: With some simple configuration and a composable, you can add search to your Nuxt Content site.
+---
 
 ## Usage
 
-First, you need to enable search in the `nuxt.config.js` file:
+First, you need to enable the search feature in your `nuxt.config.ts`:
 
-```js [nuxt.config.js]
+```js [nuxt.config.ts]
 export default defineNuxtConfig({
   content: {
     experimental: {
@@ -16,15 +17,15 @@ export default defineNuxtConfig({
 })
 ```
 
-::alert{type="info"}
-You can use the search feature with any [Nuxt Content source](/api/configuration#sources). You can also enable or not the [document-driven feature](/guide/writing/document-driven).
+::callout
+You can use the search feature with any [Nuxt Content source](/get-started/configuration#sources). You can also enable or not the [document-driven feature](/document-driven/introduction).
 ::
 
 ## Search
 
-You can use the `searchContent` composable to search in your `content` directory:
+You can use the [`searchContent`](/composables/search-content) composable to search in your `content` directory:
 
-```vue
+```vue [app.vue]
 <script lang="ts" setup>
 const search  = ref('')
 
@@ -40,9 +41,9 @@ const results = searchContent(search)
 </template>
 ```
 
-By default, the `searchContent` composable will used an indexed search. This mean that the search will be faster and the API response smaller and optimized **only usable by [`miniSearch`](https://lucaong.github.io/minisearch/)**.
+By default, the [`searchContent`](/composables/search-content) composable will used an indexed search. This mean that the search will be faster and the API response smaller and optimized **only usable by [`miniSearch`](https://lucaong.github.io/minisearch/)**.
 
-::alert{type="info"}
+::callout
 Internally, the search feature, both `searchContent` and `/api/indexed-search.ts` endpoint, use [`miniSearch`](https://lucaong.github.io/minisearch/).
 ::
 
@@ -50,7 +51,7 @@ Internally, the search feature, both `searchContent` and `/api/indexed-search.ts
 
 If needed, you can disable the indexed search and use a simple search instead:
 
-```js [nuxt.config.js]
+```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   content: {
     experimental: {
@@ -68,7 +69,7 @@ Remember that the simple search is **slower** and the API response **bigger**. Y
 
 Using the simple search, aka non-indexed search, you can use the tool of your choice to search in the API response. For example, you can use [`fuse.js`](https://fusejs.io/) with the integration of [`@vueuse/integrations`](https://vueuse.org/integrations/useFuse/#usefuse):
 
-```ts
+```ts [composables/custom-search-content.ts]
 export default async function customSearchContent(search: Ref<string>) {
   const runtimeConfig = useRuntimeConfig()
   const { integrity, api } = runtimeConfig.public.content
@@ -83,4 +84,4 @@ export default async function customSearchContent(search: Ref<string>) {
 
 ## Configuration
 
-Please, read the [configuration section](../../4.api/3.configuration.md#search) to learn more about the search configuration.
+Please, read the [configuration section](/get-started/configuration#search) to learn more about the search options.
