--- a/docs/content/4.components/6.content-slot.md
+++ b/docs/content/4.components/6.content-slot.md
@@ -27,7 +27,7 @@ It is useful when creating components that you want to use in your Markdown cont
 
 Then using it in Markdown:
 
-```md [content/index.md]
+```mdc [content/index.md]
 ::fancy-header
 That text paragraph will be unwrapped.
 ::
