--- a/docs/content/7.v1/3.community/1.snippets.md
+++ b/docs/content/7.v1/3.community/1.snippets.md
@@ -422,7 +422,7 @@ export default {
 
 - Finally use the components and mark the document to fetch the contributors
 
-```md{}[document.md]
+```md [document.md]
 ---
 title: Nuxt Content
 fetchContributors: true
