doc: recommend a full sitemap solution with Nuxt Simple Sitemap

--- a/docs/content/6.recipes/3.sitemap.md
+++ b/docs/content/6.recipes/3.sitemap.md
@@ -3,7 +3,11 @@ title: 'Sitemap'
 description: 'A sitemap file is useful for helping Google to better index your website, ensuring that the content you write can be visible in search results.'
 ---
 
-# Library
+Need a complete Sitemap solution? Check out [Nuxt Simple Sitemap](https://nuxtseo.com/sitemap/integrations/content), it integrates with Nuxt Content's document-driven mode and frontmatter.
+
+Otherwise, feel free to implement your own with the below guide.
+
+## Add dependencies
 
 This can be created by utilising the `sitemap` library, which can be installed as follows:
 
