--- a/docs/content/2.usage/3.search.md
+++ b/docs/content/2.usage/3.search.md
@@ -44,7 +44,7 @@ const results = searchContent(search)
 By default, the [`searchContent`](/composables/search-content) composable will use an indexed search. This means that the search is faster and the API response is smaller and optimized. **The response is only usable by [`miniSearch`](https://lucaong.github.io/minisearch/)**.
 
 ::callout
-Internally, the search feature, both `searchContent` and `/api/indexed-search.ts` endpoint, use [`miniSearch`](https://lucaong.github.io/minisearch/).
+Internally, both the `searchContent` composable and the `/api/indexed-search.ts` endpoint use [`miniSearch`](https://lucaong.github.io/minisearch/).
 ::
 
 ## Simple Search
