fix: 7.search-content.md typo
_payload.josn should be _payload.json

--- a/docs/content/3.composables/7.search-content.md
+++ b/docs/content/3.composables/7.search-content.md
@@ -34,4 +34,4 @@ Only available when using the simple search, aka non-indexed search.
 
 ## UseFetchOptions
 
-An option is provided to customize the behavior of the `useFetch` composable used internally to only fetch the search content on client and lazy. This could avoid fetching the content on SSR and adding content to the `_payload.josn` file improving the performance of your app since `_payload` is loaded for hydration.
+An option is provided to customize the behavior of the `useFetch` composable used internally to only fetch the search content on client and lazy. This could avoid fetching the content on SSR and adding content to the `_payload.json` file improving the performance of your app since `_payload` is loaded for hydration.
