feat: add result hooks

--- a/docs/content/3.composables/1.query-content.md
+++ b/docs/content/3.composables/1.query-content.md
@@ -243,3 +243,40 @@ const count = await queryContent('articles')
 // Returns
 5 // number of articles
 ```
+
+## `resultHook(hook)`
+
+- `hook`
+  - Type: `(content: T) => HT`
+  - **Required**
+
+Add a hook for to be executed on the results of the content query.
+
+This hook is useful for simple transforms of returned content or validation of returned data with libraries such as `zod`.
+
+```ts
+// Some example front-matter on a content page
+const articleSchema = z.object({
+  navigation: z.object({
+    nextBtn: z.string()
+  })
+})
+
+// Validate each returned article
+const articles = await queryContent('articles')
+  .resultHook(c => articleSchema.parse(c))
+  .find()
+```
+
+You can also use `resultHook(hook)` to augment the returned content with new fields.
+
+```ts
+// Count of articles
+const articles = await queryContent('articles')
+  .resultHook(c => {
+    ...c,
+    newField: 'some-data'
+  })
+  .find()
+```
+
