docs: mention that `searchContent` is an experimental feature

--- a/docs/content/3.composables/7.search-content.md
+++ b/docs/content/3.composables/7.search-content.md
@@ -1,5 +1,9 @@
 # searchContent()
 
+::alert{type="warning"}
+This is an experimental feature, opt-in with the [`experimental.search` option](/get-started/configuration#search).
+::
+
 Used to search in your `content` directory.
 
 ```ts
