--- a/docs/content/3.composables/7.search-content.md
+++ b/docs/content/3.composables/7.search-content.md
@@ -1,6 +1,8 @@
-# searchContent()
+---
+title: searchContent()
+---
 
-::alert{type="warning"}
+::callout{type="warning"}
 This is an experimental feature, opt-in with the [`experimental.search` option](/get-started/configuration#search).
 ::
 
@@ -32,7 +34,7 @@ const miniSearchOptions = defineMiniSearchOptions({
 
 Using these options allows you to modify how the search is performed. You can change the [fields that are searched, the weight of each field, and more](https://lucaong.github.io/minisearch/#search-options).
 
-::alert{type="info"}
+::callout{type="info"}
 Only available when using the simple search, aka non-indexed search.
 ::
 
