doc: rename component name in doc

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -174,7 +174,7 @@ Toggles the [document-driven mode](/document-driven/introduction).
 
 - Type: `false | object`
 
-Nuxt Content uses [Shikiji](https://github.com/antfu/shikiji) to provide syntax highlighting for [`ProseCode`](/components/prose#prosecode) and [`ProseCodeInline`](/components/prose#prosecodeinline).
+Nuxt Content uses [Shikiji](https://github.com/antfu/shikiji) to provide syntax highlighting for [`ProsePre`](/components/prose#prosepre) and [`ProseCodeInline`](/components/prose#prosecodeinline).
 
 | Option    |                     Type                     | Description                                                                                                         |
 | --------- | :------------------------------------------: | :------------------------------------------------------------------------------------------------------------------ |
