--- a/docs/content/2.usage/2.markdown.md
+++ b/docs/content/2.usage/2.markdown.md
@@ -75,7 +75,7 @@ Example variables will be injected into the document:
 
 Nuxt Content uses [Shikiji](https://github.com/antfu/shikiji), that colors tokens with VSCode themes.
 
-Code highlighting works both on [`ProseCode`](/components/prose#prosecode) and [`ProseCodeInline`](/components/prose#prosecodeinline).
+Code highlighting works both on [`ProsePre`](/components/prose#prosepre) and [`ProseCodeInline`](/components/prose#prosecodeinline).
 
 Each line of a code block gets its line number in the `line` attribute so lines can be labeled or individually styled.
 
@@ -475,7 +475,7 @@ customVariable: 'Custom Value'
 
 ```
 
-### Example 2: Define in external with `<ContentRendererMarkdown>` 
+### Example 2: Define in external with `<ContentRendererMarkdown>`
 
 ```html
 <template>
