--- a/docs/content/4.components/7.prose.md
+++ b/docs/content/4.components/7.prose.md
@@ -37,9 +37,9 @@ To overwrite a prose component, create a component with the same name in your pr
   ::
 ::
 
-## `ProseCode`
+## `ProsePre`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseCode.vue)
+[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProsePre.vue)
 
 ::code-group
   ```md [Code]
@@ -79,7 +79,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseCodeInline`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseCodeInline.vue)
+[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseCode.vue)
 
 `code inline`.
 
