typo in showURL prop
Correct prop is "showURL"

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -365,7 +365,7 @@ It is highly recommended to prevent modifying default source. If you want to loa
 | Option    | Default | Description                                    |
 | --------- | :-----: | :--------------------------------------------- |
 | `port`    |  `4000` | Select the port used for the WebSocket server. |
-| `showUrl` | `false` | Toggle URL display in dev server boot message. |
+| `showURL` | `false` | Toggle URL display in dev server boot message. |
 
 
 Disable content watcher and hot content reload.
