feat: adopt to mdc v0.4

--- a/docs/content/2.usage/2.markdown.md
+++ b/docs/content/2.usage/2.markdown.md
@@ -73,7 +73,7 @@ Example variables will be injected into the document:
 
 ## Code Highlighting
 
-Nuxt Content uses [Shikiji](https://github.com/antfu/shikiji), that colors tokens with VSCode themes.
+Nuxt Content uses [Shiki](https://github.com/shikijs/shiki), that colors tokens with VSCode themes.
 
 Code highlighting works both on [`ProsePre`](/components/prose#prosepre) and [`ProseCodeInline`](/components/prose#prosecodeinline).
 
