--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -174,7 +174,7 @@ Toggles the [document-driven mode](/document-driven/introduction).
 
 - Type: `false | object`
 
-Nuxt Content uses [Shikiji](https://github.com/antfu/shikiji) to provide syntax highlighting for [`ProsePre`](/components/prose#prosepre) and [`ProseCodeInline`](/components/prose#prosecodeinline).
+Nuxt Content uses [Shiki](https://github.com/shikijs/shiki) to provide syntax highlighting for [`ProsePre`](/components/prose#prosepre) and [`ProseCodeInline`](/components/prose#prosecodeinline).
 
 | Option    |                     Type                     | Description                                                                                                         |
 | --------- | :------------------------------------------: | :------------------------------------------------------------------------------------------------------------------ |
@@ -238,7 +238,7 @@ export default defineNuxtConfig({
   content: {
     highlight: {
       preload: [
-        // Read more about shikiji languages: https://github.com/antfu/shikiji#fine-grained-bundle
+        // Read more about Shiki languages: https://shiki.style/guide/load-lang
         JSON.parse(
           readFileSync('./shiki/languages/gdscript.tmLanguage.json', 'utf-8'),
         ),
