docs: add `highlight.langs`

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -179,7 +179,7 @@ Nuxt Content uses [Shiki](https://github.com/shikijs/shiki) to provide syntax hi
 | Option    |                     Type                     | Description                                                                                                         |
 | --------- | :------------------------------------------: | :------------------------------------------------------------------------------------------------------------------ |
 | `theme`   | `ShikiTheme` or `Record<string, ShikiTheme>` | The [color theme](https://github.com/shikijs/shiki/blob/main/docs/themes.md) to use.                                |
-| `preload` |                `ShikiLang[]`                 | The [preloaded languages](https://github.com/shikijs/shiki/blob/main/docs/languages.md) available for highlighting. |
+| `langs` |                `ShikiLang[]`                 | The [loaded languages](https://github.com/shikijs/shiki/blob/main/docs/languages.md) available for highlighting. |
 
 - `highlight.theme`
 
@@ -209,9 +209,9 @@ export default defineNuxtConfig({
 })
 ```
 
-- `highlight.preload`
+- `highlight.langs`
 
-By default, module preloads couple of languages for syntax highlighter: `['diff', 'json', 'js', 'ts', 'css', 'shell', 'html', 'md', 'yaml']`
+By default, module loads couple of languages for syntax highlighter: `['json', 'js', 'ts', 'html', 'css', 'vue', 'shell', 'mdc', 'md', 'yaml']`
 
 If you plan to use code samples of other languages, you need to define the language in these options.
 
@@ -219,7 +219,7 @@ If you plan to use code samples of other languages, you need to define the langu
 export default defineNuxtConfig({
   content: {
     highlight: {
-      preload: [
+      langs: [
         'c',
         'cpp',
         'java'
@@ -237,7 +237,7 @@ import { readFileSync } from 'node:fs'
 export default defineNuxtConfig({
   content: {
     highlight: {
-      preload: [
+      langs: [
         // Read more about Shiki languages: https://shiki.style/guide/load-lang
         JSON.parse(
           readFileSync('./shiki/languages/gdscript.tmLanguage.json', 'utf-8'),
