docs: update configuration

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -360,7 +360,7 @@ It is highly recommended to prevent modifying default source. If you want to loa
 ## `watch`
 
 - Type: `object | false`
-- Default: `{ ws: { port: 4000, showUrl: true } }`
+- Default: `{ ws: { port: 4000, showURL: false } }`
 
 | Option    | Default | Description                                    |
 | --------- | :-----: | :--------------------------------------------- |
@@ -379,7 +379,7 @@ export default defineNuxtConfig({
     watch: {
       ws: {
         port: 4000,
-        showUrl: true
+        showURL: true
       }
     }
   }
