docs: typo in  showURL prop (#2537)

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -360,12 +360,12 @@ It is highly recommended to prevent modifying default source. If you want to loa
 ## `watch`
 
 - Type: `object | false`
-- Default: `{ ws: { port: 4000, showUrl: true } }`
+- Default: `{ ws: { port: 4000, showURL: false } }`
 
 | Option    | Default | Description                                    |
 | --------- | :-----: | :--------------------------------------------- |
 | `port`    |  `4000` | Select the port used for the WebSocket server. |
-| `showUrl` | `false` | Toggle URL display in dev server boot message. |
+| `showURL` | `false` | Toggle URL display in dev server boot message. |
 
 
 Disable content watcher and hot content reload.
@@ -379,7 +379,7 @@ export default defineNuxtConfig({
     watch: {
       ws: {
         port: 4000,
-        showUrl: true
+        showURL: true
       }
     }
   }
