--- a/docs/content/3.composables/1.query-content.md
+++ b/docs/content/3.composables/1.query-content.md
@@ -45,7 +45,27 @@ const contentQuery = queryContent('articles', 'nuxt3')
 
 Filter results by query.
 
-Where queries are based on subset of [Mongo query syntax](https://www.mongodb.com/docs/manual/reference/operator/query), it handles: `$eq`, `$ne`, `$gt`, `$gte`, `$lt`, `$lte` and `$in`
+Where queries are based on subset of [Mongo query syntax](https://www.mongodb.com/docs/manual/reference/operator/query), it handles:
+
+| Operator       | Description                                                                   |
+|----------------|-------------------------------------------------------------------------------|
+| `$match`       | –                                                                             |
+| `$eq`          | Match if item equals condition                                                |
+| `$ne`          | Match if item not equals condition                                            |
+| `$not`         | Match is condition is false                                                   |
+| `$and`         | Match only if all of nested conditions are true                               |
+| `$or`          | Match if any of nested conditions is true                                     |
+| `$in`          | Match if item is in condition array                                           |
+| `$contains`    | Match if item contains every condition or match every rule in condition array |
+| `$icontains`   | Ignore case contains                                                          |
+| `$containsAny` | Match if item contains at least one rule from condition array                 |
+| `$exists`      | Check key existence                                                           |
+| `$type`        | Match if type of item equals condition                                        |
+| `$regex`       | Provides regular expression capabilities for pattern matching strings         |
+| `$lt`          | Check if item is less than condition                                          |
+| `$lte`         | Check if item is less than or equal to condition                              |
+| `$gt`          | Check if item is greater than condition                                       |
+| `$gte`         | Check if item is greater than or equal to condition                           |
 
 ```ts
 // Implicit (assumes $eq operator)
