--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -1,5 +1,5 @@
 ---
-title: Installation
+title: Installation (tesint only)
 description: Get started with Nuxt Content by creating a new project or adding it to an existing Nuxt application.
 ---
 
