docs: use new `nuxi module add` command in installation

--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -55,20 +55,9 @@ npm run dev
 ## Add to a project
 
 You can add Nuxt Content at anytime during your Nuxt project development by installing the `@nuxt/content` module:
-
-::code-group
-```bash [pnpm]
-pnpm add @nuxt/content
+```bash
+npx nuxi@latest module add content
 ```
-
-```bash [yarn]
-yarn add @nuxt/content
-```
-
-```bash [npm]
-npm install @nuxt/content
-```
-::
 
 Then, add `@nuxt/content` to the `modules` section of `nuxt.config.ts`:
 
