--- a/docs/content/7.v1/1.getting-started/2.installation.md
+++ b/docs/content/7.v1/1.getting-started/2.installation.md
@@ -4,16 +4,9 @@ description: 'Install @nuxt/content in only two steps in your Nuxt project.'
 ---
 
 Add `@nuxt/content` dependency to your project:
-
-::code-group
-```bash [Yarn]
-yarn add @nuxt/content@^1
+```bash
+npx nuxi@latest module add content
 ```
-
-```bash [NPM]
-npm install @nuxt/content@^1
-```
-::
 
 Then, add `@nuxt/content` to the `modules` section of `nuxt.config.js`:
 
