Add multiple slots example

--- a/docs/content/4.components/1.content-doc.md
+++ b/docs/content/4.components/1.content-doc.md
@@ -95,3 +95,23 @@ The `empty` slot can be used to display a default content before rendering the d
   </main>
 </template>
 ```
+
+### Slots
+
+```html [pages/[...slug\\].vue]
+<template>
+  <main>
+    <ContentDoc>
+      <template v-slot="{ doc }">
+        <article>
+          <h1>{{ doc.title }}</h1>
+          <ContentRenderer :value="doc" />
+        </article>
+      </template>
+      <template #not-found>
+        <h1>Document not found</h1>
+      </template>
+    </ContentDoc>
+  </main>
+</template>
+```
