Mention issue with draft prop

--- a/docs/content/2.usage/2.markdown.md
+++ b/docs/content/2.usage/2.markdown.md
@@ -36,7 +36,7 @@ description: 'meta description of the page'
 | ------------------------------------------- | :-------: | ------------------------------------- | -------------------------------------------------------------------------------------------------------- |
 | `title`                                     | `string`  | First `<h1>`{lang="html"} of the page | Title of the page, will also be injected in metas                                                        |
 | `description`                               | `string`  | First `<p>`{lang="html"} of the page  | Description of the page, will be shown below the title and injected into the metas                       |
-| `draft`                                     | `boolean` | `false`                               | Mark the page as draft (and only display it in development mode).                                        |
+| `draft`                                     | `boolean` | `false`                               | Mark the page as draft ([Issue](https://github.com/nuxt/content/issues/1523)).                                        |
 | `navigation`                                | `boolean` | `true`                                | Define if the page is included in [`fetchContentNavigation`](/usage/navigation) return value. |
 | [`head`](/composables/use-content-head) | `object`  | `true`                                | Easy access to [`useContentHead`](/composables/use-content-head)                                     |
 
