--- a/docs/content/4.components/2.content-renderer.md
+++ b/docs/content/4.components/2.content-renderer.md
@@ -17,7 +17,7 @@ Other types will currently be passed to default slot via `v-slot="{ data }"` or 
 - `tag`: The tag to use for the renderer element if it is used.
   - Type: `string`
   - Default: `'div'`
-- `excerpt`: Whether or not to render the excerpt.
+- `excerpt`: Whether to render the excerpt only without the rest of the content.
   - Type: `boolean`
   - Default: `false`
 - `components`: The map of custom components to use for rendering. This prop will pass to markdown renderer and will not affect other file types.
