docs: fix and update transformers

--- a/docs/content/6.recipes/2.transformers.md
+++ b/docs/content/6.recipes/2.transformers.md
@@ -14,13 +14,13 @@ You can create custom transformers to support new content types or improve funct
    - `transform`: Receives that parsed content and manipulates it.
 
 ```ts [my-transformer.ts]
-// filename: my-transformer.ts
+// @ts-expect-error
 import { defineTransformer } from '@nuxt/content/transformers'
 
 export default defineTransformer({
   name: 'my-transformer',
   extensions: ['.names'],
-  parse (_id, rawContent) {
+  parse (_id: string, rawContent: string) {
     return {
       _id,
       body: rawContent.trim().split('\n').map(line => line.trim()).sort()
@@ -32,8 +32,7 @@ export default defineTransformer({
 
 2. Define simple module to register transformer
 
-```ts [my-module.mjs]
-// filename: my-module.mjs
+```ts [my-module.ts]
 import { resolve } from 'path'
 import { defineNuxtModule } from '@nuxt/kit'
 
@@ -42,7 +41,7 @@ export default defineNuxtModule({
     nuxt.options.nitro.externals = nuxt.options.nitro.externals || {}
     nuxt.options.nitro.externals.inline = nuxt.options.nitro.externals.inline || []
     nuxt.options.nitro.externals.inline.push(resolve('./my-module'))
-    // @ts-ignore
+    // @ts-expect-error
     nuxt.hook('content:context', (contentContext) => {
       contentContext.transformers.push(resolve('./my-module/my-transformer.ts'))
     })
@@ -54,10 +53,7 @@ export default defineNuxtModule({
 3. Register your module
 
 ```ts [nuxt.config.ts]
-// filename: my-module.mjs
-import { resolve } from 'path'
-import { defineNuxtConfig } from '@nuxt/kit'
-import MyModule from './my-module'
+import MyModule from './my-module/my-module'
 
 export default defineNuxtConfig({
   modules: [
