Fix typo 2.configuration.md

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -282,7 +282,7 @@ export default defineNuxtConfig({
 - Type: `string[]`
 - Default: `[]`
 
-List of locale codes. This codes will be used to detect contents locale.
+List of locale codes. These codes will be used to detect contents locale.
 
 ## `navigation`
 
