--- a/docs/content/2.usage/3.search.md
+++ b/docs/content/2.usage/3.search.md
@@ -29,7 +29,7 @@ You can use the [`searchContent`](/composables/search-content) composable to sea
 <script lang="ts" setup>
 const search  = ref('')
 
-const results = searchContent(search)
+const results = await searchContent(search)
 </script>
 
 <template>
