Add missing `await` for searchContent docs

--- a/docs/content/3.composables/7.search-content.md
+++ b/docs/content/3.composables/7.search-content.md
@@ -10,7 +10,7 @@ Used to search in your `content` directory.
 
 ```ts
 const input = ref('')
-const results = searchContent(input)
+const results = await searchContent(input)
 ```
 
 ## Parameters
