Fix Typescript gt/lt/gte/lte defs to allow strings

--- a/docs/content/7.v1/1.getting-started/4.fetching.md
+++ b/docs/content/7.v1/1.getting-started/4.fetching.md
@@ -76,6 +76,8 @@ const articles = await this.$content('articles').where({ title: { $eq: 'Home' } 
 
 // $gt
 const articles = await this.$content('articles').where({ age: { $gt: 18 } }).fetch()
+// $lte
+const articles = await this.$content('articles').where({ createdDateTime: { $lte: new Date().toISOString() } }).fetch()
 // $in
 const articles = await this.$content('articles').where({ name: { $in: ['odin', 'thor'] } }).fetch()
 ```
