Update 5.typescript.md - changed types path
When importing types like that:
import type { QueryBuilderParams } from '@nuxt/content/dist/runtime/types'
- typescript gives an error:
Cannot find module '@nuxt/content/dist/runtime/types' or its corresponding type declarations
Making path: @nuxt/content fiche this error.

--- a/docs/content/2.usage/5.typescript.md
+++ b/docs/content/2.usage/5.typescript.md
@@ -23,7 +23,7 @@ The recommended way to do it is by using this method:
 
 ```vue
 <script setup lang="ts">
-import type { ParsedContent } from '@nuxt/content/dist/runtime/types'
+import type { ParsedContent } from '@nuxt/content'
 
 interface MyCustomParsedContent extends ParsedContent {
   yourOwn: 'keys'
@@ -45,7 +45,7 @@ type-safety.
 
 ```vue
 <script setup lang="ts">
-import type { MarkdownParsedContent } from '@nuxt/content/dist/runtime/types'
+import type { MarkdownParsedContent } from '@nuxt/content'
 
 interface Article extends MarkdownParsedContent {
   author: string
