fix: trailing comma

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -194,7 +194,7 @@ export default defineNuxtConfig({
   content: {
     highlight: {
       // Theme used in all color schemes.
-      theme: 'github-light'
+      theme: 'github-light',
       // OR
       theme: {
         // Default theme (same as single string)
@@ -332,7 +332,7 @@ export default defineNuxtConfig({
         driver: 'fs',
         prefix: '/docs', // All contents inside this source will be prefixed with `/docs`
         base: resolve(__dirname, 'content')
-      }
+      },
       // Additional sources
       fa: {
         prefix: '/fa', // All contents inside this source will be prefixed with `/fa`
