--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -324,6 +324,8 @@ Define different sources for contents.
 Contents can be located in multiple places, in multiple directories, or in remote git repositories thanks to [`unstorage`](https://unstorage.unjs.io/).
 
 ```ts [nuxt.config.ts]
+import { resolve } from "node:path";
+
 export default defineNuxtConfig({
   content: {
     sources: {
