feat: watch contents in development

--- a/playground/content/0.index.md
+++ b/playground/content/0.index.md
@@ -14,3 +14,27 @@ title: Index
 - [query](/real-content/query)
 
 In order to test [Tailwind CSS]{.text-orange-500}, uncomment `@nuxtjs/tailwindcss` in `nuxt.config.ts`.
+
+```vue [app.vue]
+<script setup>
+useSeoMeta({
+  title: 'Meet Nuxt!',
+  description: 'The Intuitive Vue Framework.'
+})
+</script>
+
+<template>
+  <div id="app">
+    <AppHeader />
+    <NuxtPage />
+    <AppFooter />
+  </div>
+</template>
+
+<style>
+#app {
+  background-color: #020420;
+  color: #00DC82;
+}
+</style>
+```
