docs: missing imports and typo in code blocks (#2741)

--- a/docs/content/1.get-started/2.configuration.md
+++ b/docs/content/1.get-started/2.configuration.md
@@ -194,7 +194,7 @@ export default defineNuxtConfig({
   content: {
     highlight: {
       // Theme used in all color schemes.
-      theme: 'github-light'
+      theme: 'github-light',
       // OR
       theme: {
         // Default theme (same as single string)
@@ -324,6 +324,8 @@ Define different sources for contents.
 Contents can be located in multiple places, in multiple directories, or in remote git repositories thanks to [`unstorage`](https://unstorage.unjs.io/).
 
 ```ts [nuxt.config.ts]
+import { resolve } from "node:path";
+
 export default defineNuxtConfig({
   content: {
     sources: {
@@ -332,7 +334,7 @@ export default defineNuxtConfig({
         driver: 'fs',
         prefix: '/docs', // All contents inside this source will be prefixed with `/docs`
         base: resolve(__dirname, 'content')
-      }
+      },
       // Additional sources
       fa: {
         prefix: '/fa', // All contents inside this source will be prefixed with `/fa`
