--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -55,7 +55,7 @@ npm run dev
 ## Add to a project
 
 ::callout{type="warning"}
-⚠️ Nuxt Content requires `ssr: true` to be set in [Nuxt Config](https://nuxt.com/docs/guide/directory-structure/nuxt-config). Nuxt applications with `ssr: false` will generate as a Single-Page Application, which is currently incombatible with prerendering Nuxt Content files.
+⚠️ Nuxt Content requires `ssr: true` (default value) to be set in [Nuxt Config](https://nuxt.com/docs/guide/directory-structure/nuxt-config). Nuxt applications with `ssr: false` will generate as a Single-Page Application, which is currently incombatible with prerendering Nuxt Content files.
 ::
 
 You can add Nuxt Content at anytime during your Nuxt project development by installing the `@nuxt/content` module:
