playground: add v2 docs

--- a/playground/content/0.index.md
+++ b/playground/content/0.index.md
@@ -1,9 +1,10 @@
 ---
 title: Index
+date: 2024-09-23
 ---
 
 
-# 🎨 Playground
+# 🎨 Playground ss 22 33
 
 - [Playground](/playground)
 - [Query Builder](/query-playground)
