docs: init collections docs

--- a/docs/content/1.getting-started/3.collections.md
+++ b/docs/content/1.getting-started/3.collections.md
@@ -1,6 +1,205 @@
 ---
 title: 'Collections'
-description: 'Learn how to install and configure Nuxt Content v3 in your application.'
+description: 'How to define and configue content collections.'
 ---
 
-Hello
+Collections in Nuxt Content are a powerful way to organize and manage your content. They allow you to group related content items together, making it easier to query, display, and maintain your site's content.
+
+
+## What are Content Collections?
+
+Content Collections are groups of related content items within your Nuxt Content project. They provide a structured way to organize and manage your content, making it easier to work with large amounts of data.
+
+Key features of Content Collections include:
+
+1. **Logical Grouping**: Collections allow you to group similar content together, such as blog posts, product pages, or documentation articles.
+
+2. **Shared Configuration**: You can apply common settings and validations to all items within a collection, ensuring consistency across your content.
+
+3. **Improved Querying**: Collections make it easier to fetch and filter related content items, enhancing the performance and flexibility of your content queries.
+
+4. **Automatic Type Inference**: Nuxt Content can automatically infer the structure of your content, providing type safety and autocompletion in your development environment.
+
+5. **Flexible Structure**: Collections can be organized in various ways, such as by content type, category, or any other logical grouping that suits your project's needs.
+
+## Defining Collections
+
+To define a custom collection, create `content.config.ts` file in ptoject's root directory. This is a special file that Nuxt Content will load and use to configure collections database, utility types and finding/parsing/querying contents.
+
+Here's a simple example of how to define collections in your `content.config.ts` file:
+
+```ts [content.config.ts]
+import { defineCollection } from '@nuxt/content'
+
+// Export collections
+export const collections = {
+  // Define collection using `defineCollection` utility
+  docs: defineCollection({
+    // Define the source directory for the collection
+    // `source: '**'` will load every file inside `content` directory 
+    source: '**',
+    // Specify the type of content in this collection
+    type: 'page'
+  })
+}
+```
+
+### Collection Schema
+
+Schema is and important part of each collection. Schemas enforce consistent  data within a collection. Schemas also are grounf truth of Typescript typings for collections.
+
+To define schema for you collection, go to `content.config.ts` and provide `schema` for your collection in `defineCollection` function.
+
+```ts [content.config.ts]
+import { defineCollection, z } from '@nuxt/content'
+
+// Export collections
+export const collections = {
+  // Define collection using `defineCollection` utility
+  docs: defineCollection({
+    // Define the source directory for the collection
+    // `source: '**'` will load every file inside `content` directory 
+    source: '**',
+    // Specify the type of content in this collection
+    type: 'page',
+    // Define custom schema for docs collection
+    schema: z.object({ // Schema root should be an object!!
+      tags: z.array(z.string()),
+      image: z.string(),
+      date: z.Date()
+    })
+  })
+}
+```
+
+
+### Multiple collections
+
+Defining multiple collections is as easy as creating one.
+
+
+```ts [content.config.ts]
+import { defineCollection, z } from '@nuxt/content'
+
+// Export collections
+export const collections = {
+  // Define collection using `defineCollection` utility
+  blog: defineCollection({
+    // Define the source directory for the collection
+    // `source: 'blog/**'` will load every file inside `content/blog` directory 
+    source: 'blog/**',
+    // Specify the type of content in this collection
+    type: 'page'
+  }),
+  docs: defineCollection({
+    // Define the source directory for the collection
+    // `source: 'docs/**'` will load every file inside `content/docs` directory 
+    source: 'docs/**',
+    // Specify the type of content in this collection
+    type: 'page'
+  })
+}
+```
+
+## API
+
+### `defineCollection(collection: Collection)`
+
+
+The `defineCollection` function is used to define a collection in your content configuration. It takes a single argument of type `Collection` and returns the defined collection.
+
+#### Parameters
+
+- `collection`: An object of type `Collection` with the following properties:
+  - `source`: Specifying the source of collection. accepts:
+    - A string in glob patterns to define which files to include.
+    - An object
+  - `type`: The type of content in the collection. Currently, only `'page'` and `'data'` are supported.
+  - `schema`: (Optional) A Zod schema to validate and type the frontmatter of the documents in the collection.
+
+
+##### `type`
+
+The type parameter in defineCollection determines how the content will be processed and used:
+
+- `data`: For structured data that doesn't need rendering, like JSON or YAML files.
+- `page`: For rendering full pages with layouts and components.
+
+This choice affects how Nuxt Content handles and exposes the collection's content.
+
+By default Nuxt Content adds predefined fields to all collection. These fields are important for Module's internal workflow.
+
+  - `contentId`: Unique Identifier for the content in collection.
+  - `weight`: Numerical reperesentation of content order.
+  - `stem`: Path of content file wihtout extension. (This is mainly used for sorting and locating the file)
+  - `extension`: File extension
+  - `meta`: A place that you find all custom fields that are not part of collection schema.
+
+In addition to these global fields, `page` collection have extra fields:
+
+- `path`: Generated path for the content that can be used as page route.
+- `title`: Page title.
+- `description`: Page description.
+- `seo`: Seo head meta.
+- `body`: The actual content of the page.
+- `navigation`: Navigation config of the page.
+
+##### `source`
+
+Collection source is specifying the location in which Nuxt Content can locate the content files.
+
+```ts
+type CollectionSource = {
+  // Glob pattern to match collection contents
+  path: string
+  // A prefix that will add to contents path (this will only applicable in `page` collections)
+  prefix?: string
+  // List of glob patterns that will use to ignore contents inside path
+  ignore?: string[]
+  // Absolute path to the root directory on content in which Nuxt Content will match the glob pattern
+  cwd?: string
+  // Nuxt Content can fetch contents from a remote git repository. ex: https://github.com/nuxt/content
+  repository?: string
+}
+```
+
+##### `schema`
+
+The `schema` property allows you to define a Zod schema for validating and typing the frontmatter of documents in your collection. This schema helps ensure data consistency and provides TypeScript support for your content.
+
+Here's an example of how you can use the `schema` property:
+
+```ts [content.config.ts]
+import { defineCollection, z } from '@nuxt/content'
+
+export const collections = {
+  docs: defineCollection({
+    source: '**',
+    type: 'page',
+    schema: z.object({ // Schema root should be an object!!
+      tags: z.array(z.string()),
+      image: z.string(),
+      date: z.Date()
+    })
+  })
+}
+```
+
+::callout
+Note that Nuxt Content extends your custom schema with a predefined schemas to improve querying experience. Checkout [Source type](#type) section to read more.
+::
+
+#### Returns
+
+The function returns the defined collection object.
+
+
+## Querying Collections
+
+Nuxt Content provides `queryCollection` utility to query a collection and fetch on or all contents.
+
+```ts
+const docs = await queryCollection('docs').all()
+```
+
+Checkout [`queryCollections` Docs](/composables/query-collection) to read more about this utility.
