docs: update logo

--- a/docs/content/3.components/0.content-renderer.md
+++ b/docs/content/3.components/0.content-renderer.md
@@ -7,6 +7,19 @@ The `<ContentRenderer>` component renders a document coming from a query with [`
 
 > This component works only with `pages` collections.
 
+```vue [[...slug\\].vue]
+<script>
+const route = useRoute()
+const { data: page } = await useAysncData(route.path, () => {
+  return queryCollection('docs').path(route.path).first()
+})
+</script>
+
+<template>
+  <ContentRendere v-if="page" :value="page" />
+</template>
+```
+
 ## Props
 
 - `value`: The document to render.
