--- a/docs/content/1.getting-started/2.installation.md
+++ b/docs/content/1.getting-started/2.installation.md
@@ -35,3 +35,15 @@ export default defineNuxtConfig({
 })
 ```
 
+3. (Optional) Create `content.config.ts` file in project root directory and create your first collextion.
+
+```ts [content.config.ts]
+import { defineCollection } from '@nuxt/content'
+
+export const collections = {
+  content: defineCollection({
+    type: 'page',
+    source: '**/*.md'
+  })
+}
+```
