docs: update structure

--- a/docs/content/3.api/1.query-collection.md
+++ b/docs/content/3.api/1.query-collection.md
@@ -3,6 +3,12 @@ title: queryCollection
 description: 'The queryCollection composable provides methods for querying and fetching your collections.'
 ---
 
+## Type
+
+```ts
+function queryCollection<T extends keyof Collections>(collection: T): CollectionQueryBuilder<Collections[T]>
+```
+
 ## Usage
 
 Use the auto-imported `queryCollection` to find contents inside a collection.Here we assume that you havr defined `docs` collection inside `content.config.ts`. If you have not defined any collection, check [How to define a collection](/getting-started/collections#defineCollection).
