--- a/docs/content/3.api/3.query-collection-item-surroundings.md
+++ b/docs/content/3.api/3.query-collection-item-surroundings.md
@@ -3,13 +3,19 @@ title: queryCollectionItemSurroundings
 description: 'The queryCollectionItemSurroundings composable looks for sibling contents of an specific path.'
 ---
 
+## Type
+
+```ts
+function queryCollectionItemSurroundings<T extends keyof PageCollections>(collection: T, path: string, opts?: SurroundOptions<keyof PageCollections[T]>): Promise<ContentNavigationItem[]>
+```
+
 ## Usage
 
 Use the auto-imported `queryCollectionItemSurroundings` to find the previous and next items relative to a specific content item in a collection. This is particularly useful for creating navigation between related content pages.
 
 ```vue [[...slug\\].vue]
-<script>
-const { data: surround } = await useAysncData('foo-surround', () => {
+<script setup lang="ts">
+const { data } = await useAysncData('surround', () => {
   return queryCollectionItemSurroundings('docs', '/foo')
 })
 </script>
@@ -41,8 +47,8 @@ Here's an example of how to use `queryCollectionItemSurroundings` to create a si
 
 
 ```vue [[...slug\\].vue]
-<script>
-const { data: surround } = await useAysncData('foo-surround', () => {
+<script setup lang="ts">
+const { data } = await useAysncData('surround', () => {
   return queryCollectionItemSurroundings('docs', '/foo', {
     before: 1,
     after: 1,
