--- a/docs/content/3.api/4.query-collection-search-sections.md
+++ b/docs/content/3.api/4.query-collection-search-sections.md
@@ -3,6 +3,12 @@ title: queryCollectionSearchSections
 description: 'The queryCollectionSearchSections composable generates searchable sections from a collection for enhanced content discovery.'
 ---
 
+## Type
+
+```ts
+function queryCollectionSearchSections(collection: keyof Collections, opts?: { ignoredTags: string[] }): Promise<Section[]>
+```
+
 ## Usage
 
 Use the auto-imported `queryCollectionSearchSections` to generate searchable sections from a specific collection. This is particularly useful for creating advanced search functionality or content discovery features in your application.
