--- a/docs/content/4.components/0.content-renderer.md
+++ b/docs/content/4.components/0.content-renderer.md
@@ -1,5 +1,5 @@
 ---
-title: '<ContentRenderer>'
+title: ContentRenderer
 description: 'Takes your component from an AST to a wonderful template.'
 ---
 
@@ -8,7 +8,7 @@ The `<ContentRenderer>` component renders a document coming from a query with [`
 > This component works only with `pages` collections.
 
 ```vue [[...slug\\].vue]
-<script>
+<script lang="ts" setup>
 const route = useRoute()
 const { data: page } = await useAysncData(route.path, () => {
   return queryCollection('docs').path(route.path).first()
@@ -16,7 +16,7 @@ const { data: page } = await useAysncData(route.path, () => {
 </script>
 
 <template>
-  <ContentRendere v-if="page" :value="page" />
+  <ContentRenderer v-if="page" :value="page" />
 </template>
 ```
 
