--- a/docs/content/3.api/2.query-collection-navigation.md
+++ b/docs/content/3.api/2.query-collection-navigation.md
@@ -3,14 +3,20 @@ title: queryCollectionNavigation
 description: 'The queryCollectionNavigation composable generates the navigation tree of given collection.'
 ---
 
+## Type
+
+```ts
+function queryCollectionNavigation<T extends keyof PageCollections>(collection: T, fields?: Array<keyof PageCollections[T]>): Promise<ContentNavigationItem[]>
+```
+
 ## Usage
 
 Use the auto-imported `queryCollectionNavigation` to generate a navigation tree for a specific collection. This is particularly useful for creating dynamic navigation menus or sidebars based on your content structure.
 
 
 ```vue [[...slug\\].vue]
-<script>
-const { data: navigation } = await useAysncData('docs-navigation', () => {
+<script setup lang="ts">
+const { data } = await useAysncData('navigation', () => {
   return queryCollectionNavigation('docs')
 })
 </script>
